--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "keywords": ["restart", "autoload", "reload", "restarter", "command-line", "cli", "terminal"],
     "version": "0.1.3",
     "homepage": "http://github.com/aaronblohowiak/restartr",
-    "bin": {"restartr" : "./restarter"},
+    "bin": {"restartr" : "./restartr"},
     "repository" : { 
       "type" : "git",
       "url" : "git://github.com/aaronblohowiak/restartr.git"
