--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-    "name": "restartr",
-    "author": "Aaron Blohowiak <aaron.blohowiak@gmail.com>",
-    "description": "Restart your process when a file changes.",
-    "keywords": ["restart", "autoload", "reload", "restarter", "command-line", "cli", "terminal"],
-    "version": "0.1.8",
-    "homepage": "http://github.com/aaronblohowiak/restartr",
-    "bin": {"restartr" : "./restartr"},
-    "repository" : { 
-      "type" : "git",
-      "url" : "git://github.com/aaronblohowiak/restartr.git"
-    },
-    
-    "dependencies": {
-      "optimist": "0.0.3"
-    }
-    
+  "name": "restartr",
+  "author": "Aaron Blohowiak <aaron.blohowiak@gmail.com>",
+  "description": "Restart your process when a file changes.",
+  "keywords": ["restart", "autoload", "reload", "restarter", "command-line", "cli", "terminal"],
+  "version": "0.1.8",
+  "homepage": "http://github.com/aaronblohowiak/restartr",
+  "bin": "restartr",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aaronblohowiak/restartr.git"
+  },
+  "dependencies" : {
+    "optimist": "0.0.3"
+  }  
 }
 
