--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/aaronblohowiak/restartr.git"
   },
   "dependencies" : {
-    "optimist": "0.0.3"
+    "optimist": ">=0.0.3"
   }  
 }
 
